--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -525,26 +525,49 @@
 						<TD>
 							<TABLE cellpadding="0" class="lms-ui-separated-rows">
 								<tbody class="lms-ui-multi-check">
-									<TR>
-										<TD>
-											<strong>{trans("Consents")}</strong>
-										</TD>
-										<TD>
-											<input type="checkbox" class="lms-ui-multi-check-all" value="1">
-										</TD>
-									</TR>
+									<tr>
+										<td>
+											<label for="check-all-consents">
+												<strong>{trans("Consents")}</strong>
+											</label>
+										</td>
+										<td>
+											<input type="checkbox" class="lms-ui-multi-check-all"
+												id="check-all-consents" value="1">
+										</td>
+									</tr>
 									{block name="customereditbox-options"}
 										{foreach $_CCONSENTS as $type => $consent}
-											<TR>
-												<TD>
-													<span class="consent-label">{$consent.label}</span>
-												</TD>
-												<TD>
-													<input type="checkbox" name="customerdata[consents][{$type}]" id="chkconsent{$type}"
-														value="{$smarty.now}"{if isset($customerinfo.consents[$type])} checked{/if}
-														{tip trigger="chkconsent"|cat:$type class="lms-ui-multi-check"}>
-												</TD>
-											</TR>
+											{if !is_array($consent)}
+												{continue}
+											{/if}
+											{if $consent.type == 'selection'}
+												{foreach $consent.values as $subtype => $subconsent}
+													<tr>
+														<td>
+															<label class="consent-label" for="chkconsent{$subtype}">
+																{t a=$consent.label b=$subconsent.label}<!subconsent-label>$a ($b){/t}
+															</label>
+														</td>
+														<td>
+															<input type="radio" name="customerdata[consents][{$type}]" id="chkconsent{$subtype}"
+																value="{$subtype}"
+																{if isset($customerinfo.consents[$type]) && $customerinfo.consents[$type] == $subtype} checked{/if}>
+														</td>
+													</tr>
+												{/foreach}
+											{else}
+												<tr>
+													<td>
+														<span class="consent-label">{$consent.label}</span>
+													</td>
+													<td>
+														<input type="checkbox" name="customerdata[consents][{$type}]" id="chkconsent{$type}"
+															value="{$smarty.now}"{if isset($customerinfo.consents[$type])} checked{/if}
+															{tip trigger="chkconsent"|cat:$type class="lms-ui-multi-check"}>
+													</td>
+												</tr>
+											{/if}
 										{/foreach}
 									{/block}
 								</tbody>
@@ -748,6 +771,10 @@
 				});
 				return false;
 			}
+		});
+
+		$('#check-all-consents').change(function() {
+			$(this).closest('.lms-ui-multi-check').find(':radio').prop('checked', $(this).prop('checked'));
 		});
 	});
 
