--- a/templates/default/event/eventlistfilter.html
+++ b/templates/default/event/eventlistfilter.html
@@ -60,7 +60,7 @@
 							<OPTION value="2"{if $filter.privacy == "2"} selected{/if}>{trans("private")}</OPTION>
 						</SELECT>
 						{trans("Customer:")}
-						{customerlist form="filter" customers=$customers selected=$filter.customerid selectname="u" inputname="u" customOnChange="document.filter.submit();" customername=false}
+						{customerlist form="filter" customers=$customerlist selected=$filter.customerid selectname="u" inputname="u" customOnChange="document.filter.submit();" customername=false}
 						{button label="Today" onclick="location.href='?m=eventlist&day={$smarty.now|date_format:"d"}&month={$smarty.now|date_format:"m"}&year={$smarty.now|date_format:"Y"}';"}
 						<input type="text" name="date" class="lms-ui-date" value="{if $filter.year}{sprintf("%04d/%02d/%02d", $filter.year, $filter.month, $filter.day)}{/if}" onchange="document.filter.submit();">
 						{trans("Status:")}
