improvement: renamed 'opened documents' to 'unapproved documents'

--- a/templates/default/message/messageadd.html
+++ b/templates/default/message/messageadd.html
@@ -245,7 +245,7 @@
 									<option value="63"{if $message.group == "63"} selected{/if}>{trans("in debt above 200% (expired)")}</option>
 									<option value="53"{if $message.group == "53"} selected{/if}>{trans("not in debt")}</option>
 									<option value="60"{if $message.group == "60"} selected{/if}>{trans("not in debt (expired)")}</option>
-									<option value="59"{if $message.group == "59"} selected{/if}>{trans("opened documents")}</option>
+									<option value="59"{if $message.group == "59"} selected{/if}>{trans("unapproved documents")}</option>
 								</select>
 							</td>
 							<td class="nobr">{trans("Group")}</td>
