--- a/templates/default/clearheader.html
+++ b/templates/default/clearheader.html
@@ -7,4 +7,4 @@
 <title>LMS – {if $layout.pagetitle != ""}{$layout.pagetitle}{/if}</title>
 <link href="css/style_print.css" rel="stylesheet" type="text/css">
 </head>
-<body{if $landscape} class="landscape"{/if}{if preg_match('/report/i', ConfigHelper::getConfig('phpui.printer_window'))} onload="window.print()"{/if}>
+<body{if $landscape} class="landscape"{/if}{if preg_match('/report/i', ConfigHelper::getConfig('phpui.printer_window', '', true))} onload="window.print()"{/if}>
