--- a/templates/default/message/messageadd.html
+++ b/templates/default/message/messageadd.html
@@ -228,33 +228,41 @@
 						<tr>
 							<td class="nobr" rowspan="3">{trans("Status")}</td>
 							<td rowspan="3">
-								<select name="message[group]" {tip trigger="group" text="Select recipients group"}>
-									<option value="0"{if !$message.group} selected{/if}>{trans("- all customers -")}</option>
-									<optgroup label="{trans("Customers")}">
+								<select name="message[state]" {tip trigger="state"}>
+									<option value="0"{if !$message.state} selected{/if}>{trans("- all customers -")}</option>
+									<optgroup label="Status">
 										{foreach $_CSTATUSES as $statusidx => $status}
-											<option value="{$statusidx}"{if $message.group == $statusidx} selected{/if}>{$status.plurallabel}</option>
+											<option value="{$statusidx}"{if $message.state == $statusidx} selected{/if}>{$status.plurallabel}</option>
 										{/foreach}
-										<option value="50"{if $message.group == "50"} selected{/if}>{trans("deleted<!plural>")}</option>
+									</optgroup>
+									<optgroup label="{trans("Customers")}">
+										<option value="50"{if $message.state == "50"} selected{/if}>{trans("deleted<!plural>")}</option>
 									</optgroup>
 									<optgroup label="{trans("Nodes")}">
-										<option value="51"{if $message.group == "51"} selected{/if}>{trans("with disconnected nodes")}</option>
+										<option value="51"{if $message.state == "51"} selected{/if}>{trans("with disconnected nodes")}</option>
 									</optgroup>
 									<optgroup label="{trans("Finances")}">
 										{if !ConfigHelper::checkPrivilege('hide_finances')}
-											<option value="52"{if $message.group == "52"} selected{/if}>{trans("in debt")}</option>
-											<option value="61"{if $message.group == "61"} selected{/if}>{trans("in debt (expired)")}</option>
-											<option value="64"{if $message.group == "64"} selected{/if}>{trans("in debt (expired by more than 30 days)")}</option>
-											<option value="65"{if $message.group == "65"} selected{/if}>{trans("in debt (expired by more than 60 days)")}</option>
-											<option value="57"{if $message.group == "57"} selected{/if}>{trans("in debt above 100%")}</option>
-											<option value="62"{if $message.group == "62"} selected{/if}>{trans("in debt above 100% (expired)")}</option>
-											<option value="58"{if $message.group == "58"} selected{/if}>{trans("in debt above 200%")}</option>
-											<option value="63"{if $message.group == "63"} selected{/if}>{trans("in debt above 200% (expired)")}</option>
-											<option value="53"{if $message.group == "53"} selected{/if}>{trans("not in debt")}</option>
-											<option value="60"{if $message.group == "60"} selected{/if}>{trans("not in debt (expired)")}</option>
+											<option value="52"{if $message.state == "52"} selected{/if}>{trans("in debt")}</option>
+											<option value="161"{if $message.state == "161"} selected{/if}>{trans("in debt (expired)")}</option>
+											<option value="164"{if $message.state == "64"} selected{/if}>{trans("in debt (expired by more than 30 days)")}</option>
+											<option value="165"{if $message.state == "65"} selected{/if}>{trans("in debt (expired by more than 60 days)")}</option>
+											<option value="57"{if $message.state == "57"} selected{/if}>{trans("in debt above 100%")}</option>
+											<option value="162"{if $message.state == "162"} selected{/if}>{trans("in debt above 100% (expired)")}</option>
+											<option value="58"{if $message.state == "58"} selected{/if}>{trans("in debt above 200%")}</option>
+											<option value="163"{if $message.state == "163"} selected{/if}>{trans("in debt above 200% (expired)")}</option>
+											<option value="153"{if $message.state == "153"} selected{/if}>{trans("not in debt")}</option>
+											<option value="160"{if $message.state == "160"} selected{/if}>{trans("not in debt (expired)")}</option>
 										{/if}
 									</optgroup>
 									<optgroup label="{trans("Documents")}">
-										<option value="59"{if $message.group == "59"} selected{/if}>{trans("unapproved documents")}</option>
+										<option value="159"{if $message.state == "159"} selected{/if}>{trans("unapproved documents")}</option>
+										<option value="59"{if $filter.state == 59} selected{/if}>{trans("without contracts")}</option>
+										<option value="76"{if $filter.state == 76} selected{/if}>{trans("without active contracts")}</option>
+										<option value="60"{if $filter.state == 60} selected{/if}>{trans("with expired contracts")}</option>
+										<option value="77"{if $filter.state == 77} selected{/if}>{trans("with expired, active contracts")}</option>
+										<option value="61"{if $filter.state == 61} selected{/if}>{trans("with expiring contracts")}</option>
+										<option value="78"{if $filter.state == 78} selected{/if}>{trans("with expiring, active contracts")}</option>
 									</optgroup>
 								</select>
 							</td>
