enhancement: added info property to voip numbers (web frontend part)

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1124,7 +1124,8 @@
 }
 
 .lms-ui-icon-calendar,
-.lms-ui-icon-timetable {
+.lms-ui-icon-timetable,
+.lms-ui-icon-billing {
   .fa-icon;
   .fas;
   .lms-ui-icon;
