--- a/templates/default/voipaccount/voipaccounteditbox.html
+++ b/templates/default/voipaccount/voipaccounteditbox.html
@@ -115,6 +115,7 @@
                                                             <input type="search" name="voipaccountedit[numbers][0][info]"
                                                                 value="{$voipaccountinfo.numbers[0].info|default:""|escape}"
                                                                 class="phone-info" placeholder="{trans("description")}"
+                                                                autocomplete="off"
                                                                 {tip trigger="phone-info-0"}>
                                                         </td>
                                                         <td>
@@ -136,6 +137,7 @@
                                                                     <input type="search" name="voipaccountedit[numbers][{$k}][info]"
                                                                         value="{$v.info|default:""|escape}"
                                                                         class="phone-info" placeholder="{trans("description")}"
+                                                                        autocomplete="off"
                                                                         {tip trigger="phone-info-{$k}"}>
                                                                 </td>
                                                                 <td><div>{$pool_number_select} {$remove_number}</div></td>
@@ -342,7 +344,7 @@
             var table = $('#phone_numbers_table');
             var i = table.find('[type="tel"]').length;
             var phone_number_input = '<input type="tel" name="voipaccountedit[numbers][' + i +'][phone]" class="phone-number" placeholder="{trans("<!phone>number")}" {tip trigger="phone-number"}>' +
-                '<input type="search" name="voipaccountedit[numbers][' + i + '][info]" class="phone-info" placeholder="{trans("description")}" {tip trigger="phone-info"}>';
+                '<input type="search" name="voipaccountedit[numbers][' + i + '][info]" class="phone-info" placeholder="{trans("description")}" autocomplete="off" {tip trigger="phone-info"}>';
             table.append('<tr class="row"><td>' + phone_number_input + '</td><td><div>' + pool_number_select + ' ' + remove_number + '</div></td></tr>');
             var numbers = table.find('.remove-number');
             numbers.toggleClass('lms-ui-visibility-hidden', numbers.length < 2);
