--- a/templates/default/welcome/welcome_summaries.html
+++ b/templates/default/welcome/welcome_summaries.html
@@ -46,7 +46,7 @@
         </tr>
         <tr>
             <td class="text-right bold">
-                <a href="?m=nodelist&amp;s=5">{trans("TERRIT not specified")}:</a>
+                <a href="?m=nodelist&amp;s=5">{trans("<!welcome>TERRIT not specified")}:</a>
             </td>
             <td>
                 {$nodestats.withoutterryt}
