enhancement: new LMSFpdiBackend allows to easily merge/unite many PDF contents

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1091,6 +1091,19 @@
 									</label>
 								</TD>
 							</TR>
+							<tr>
+								<td>
+									<img src="img/docum.gif" alt="">
+								</td>
+								<td collspan="3">
+									<label>
+										<input type="checkbox" name="attach-documents">
+										<strong>
+											{trans("attach documents")}
+										</strong>
+									</label>
+								</td>
+							</tr>
 						</TABLE>
 					</TD>
 				</TR>
