--- a/templates/default/pluginlist.html
+++ b/templates/default/pluginlist.html
@@ -28,7 +28,7 @@
 			{trans("Current DB Schema Version:")}<br>
 			{trans("DB Schema Version:")}
 		</TD>
-		<TD style="width: 30%;" class="bold text-center nobr">{trans("<!pluginslist>Priority:")}</TD>
+		<TD style="width: 30%;" class="bold text-center nobr">{trans("<!pluginlist>Priority:")}</TD>
 		<TD style="width: 1%;" class="bold text-right nobr">{trans("Enabled:")}</TD>
 	</TR>
     </THEAD>
