--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -911,224 +911,264 @@
 {/if}
 {if $printmenu=="finances"}
 <form method="post" name="printinvoices" id="printinvoices" action="?m=print&type=invoices">
-<INPUT type="submit" class="hiddenbtn">
-<SCRIPT type="text/javascript">
-<!--
-	function print()
-	{
+	<input type="submit" class="hiddenbtn">
+</form>
+<script>
+
+	function print() {
 		document.printinvoices.action="?m=print&type=invoices";
 		document.printinvoices.target='_blank';
 		document.printinvoices.submit();
 	}
 
-	function print_forms()
-	{
+	function print_forms() {
 		document.printinvoices.action="?m=print&type=transferforms&kind=1";
 		document.printinvoices.target='_blank';
 		document.printinvoices.submit();
 	}
 
 	function export_to_jpk(type) {
-		if ($('form[name="printinvoices"] select[name="division"]').val() == '0') {
+		if ($('select[form="printinvoices"][name="division"]').val() == '0') {
 			alertDialog($t("Division not selected!"), $(".export_to_jpk"));
 			return;
 		}
 
 		document.printinvoices.action = "?m=print&type=invoices&jpk=" + type + '&jpk_format='
-			+ $('form[name="printinvoices"] select[name="format"]').val();
+			+ $('select[form="printinvoices"][name="format"]').val();
 		document.printinvoices.submit();
 	}
-//-->
-</SCRIPT>
-<TABLE class="lmsbox">
-    <COLGROUP>
-        <COL style="width: 1%;">
-        <COL style="width: 99%;">
-    </COLGROUP>
-    <THEAD>
-	<TR>
-		<TH scope="col">
-			<IMG src="img/money.gif" alt="">
-		</TH>
-		<TH scope="col" class="bold nobr">
-			{trans("Invoices")}
-		</TH>
-	</TR>
-    </THEAD>
-    <TBODY>
-	<TR>
-		<TD class="container" width="100%" colspan="2">
-			<TABLE width="100%" cellpadding="3">
-				<TR>
-					<TD style="width: 1%;">
-					    <TABLE width="100%">
-						<TR>
-							<TD style="width: 1%;">
-								<IMG src="img/division.gif" alt="">
-							</TD>
-							<TD style="width: 1%;" class="bold nobr">
-								{trans("Division")}:
-							</TD>
-							<TD style="width: 98%;" class="nobr">
-								<SELECT size="1" name="division" {tip text="Select division"}>
-									<OPTION value="0">{trans("— all —")}</OPTION>
-									{foreach $divisions as $division}
-									<OPTION value="{$division.id}">{$division.label|escape}</OPTION>
-									{/foreach}
-								</SELECT>
-							</TD>
-						</TR>
-						<TR>
-							<TD style="width: 1%;">
-								<IMG src="img/customer.gif" alt="">
-							</TD>
-							<TD style="width: 1%;" class="bold nobr">
-								{trans("Customer:")}
-							</TD>
-							<TD style="width: 98%;" class="nobr">
-								{customerlist form="printinvoices" customers=$customers version=2
-									selectname="cust" inputname="customer" firstoption="— all customers —" selecttip="You can select customer to limit results" inputtip="Enter customer ID or leave empty for all customers"}
-							</TD>
-						</TR>
-						<tr>
-							<td><img src="img/customer.gif" alt=""></td>
-							<td class="bold">{trans("Customers")}:</td>
-							<td>
-								<select name="customer_type">
-									<option value="-1">{trans("— all customers —")}</option>
-									{foreach from=$_CTYPES key=key item=item}
-									<option value="{$key}">{$item}</option>
-									{/foreach}
-								</select>
-							</td>
-						</tr>
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/group.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Group:")}
-						    </TD>
-						    <TD style="width: 98%;" class="nobr">
-								<input type="hidden" name="group" value="all">
-								<SELECT size="1" name="group[]" class="lms-ui-multiselect" data-default-value="{trans("— all groups —")}" multiple>
-									{foreach $customergroups as $customergroup}
-									<OPTION value="{$customergroup.id}">{$customergroup.name|truncate:30:"&hellip;":true}</OPTION>
-									{/foreach}
-								</SELECT>
-								<INPUT type="checkbox" name="groupexclude" id="invoices-groupexclude" {if $listdata.groupexclude} CHECKED{/if}><label for="invoices-groupexclude">{trans("exclude group")}</label>
-						    </TD>
-						</TR>
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/queue.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Plan:")}
-						    </TD>
-						    <TD style="width: 98%;" class="nobr">
-								<input type="hidden" name="numberplan" value="all">
-								<SELECT name="numberplan[]" {tip class="lms-ui-multiselect" text="Select numbering plan"} data-default-value="{trans("— all —")}" multiple>
-									{foreach $numberplans as $plan}
-									{assign var=period value=$plan.period}
-									<OPTION value="{$plan.id}">{number number=$plan.next template=$plan.template time=$invoice.cdate} ({$_NUM_PERIODS.$period})</OPTION>
-									{/foreach}
-								</SELECT>
-						    </TD>
-						</TR>
-					    </TABLE>
-					</TD>
-					<TD style="width: 99%;">
-						<TABLE style="width: 100%;">
-							<TR>
-								<TD style="width: 1%;">
-									<IMG src="img/calendar.gif" alt="">
-								</TD>
-								<TD style="width: 1%;">
-									<span class="lms-ui-date-period-container">
-										<strong>{trans("Period:")}</strong>
-										{date_period_preset from="#printinvoices [name=\"invoicefrom\"]" to="#printinvoices [name=\"invoiceto\"]"}
-										<span>{trans("From")}</span>
-										<input type="text" name="invoicefrom" size="10" maxlength="10"
-											placeholder="{trans("yyyy/mm/dd")}"
-											{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
-										<span>{trans("To")}</span>
-										<input type="text" name="invoiceto" size="10" maxlength="10"
-											placeholder="{trans("yyyy/mm/dd")}"
-											{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
-									</span>
-								</TD>
-								<TD style="width: 1%;">
-									<IMG src="img/info.gif" alt="">
-								</TD>
-								<TD style="width: 97%; white-space: nowrap;">
-									<INPUT type="checkbox" name="invoiceorg" ID="invoiceorg"{if preg_match('/original/i', $default_printpage)} CHECKED{/if}>&nbsp;<label for="invoiceorg">{trans("original")}</label>&nbsp;
-									<INPUT type="checkbox" name="invoicecopy" ID="invoicecopy"{if preg_match('/copy/i', $default_printpage)}  CHECKED{/if}>&nbsp;<label for="invoicecopy">{trans("copy")}</label>&nbsp;
-									<INPUT type="checkbox" name="invoicedup" ID="invoicedup"{if preg_match('/duplicate/i', $default_printpage)} CHECKED{/if}>&nbsp;<label for="invoicedup">{trans("duplicate")}</label>
-								</TD>
-							</TR>
-							<TR>
-								<TD>
-									<IMG src="img/options.gif" alt="">
-								</TD>
-								<TD colspan="2" class="bold nobr">
-									{trans("Agreement for an electronic invoice:")}
-									<select name="einvoice">
-										<option value="0">{trans("— all —")}</option>
-										<option value="1">{trans("yes")}</option>
-										<option value="2">{trans("no")}</option>
-									</select>
-								</TD>
-								<TD>
-									<label>
-										<input type="checkbox" name="autoissued">
-										{trans("only automatically issued")}
-									</label>
-									<br>
-									<label>
-										<input type="checkbox" name="manualissued">
-										{trans("only manually issued")}
-									</label>
-								</TD>
-							</TR>
-							<tr>
-								<td>
-									<img src="img/docum.gif" alt="">
-								</td>
-								<td collspan="3">
-									<label>
-										<input type="checkbox" name="attach-documents">
+
+</script>
+<table class="lmsbox">
+	<colgroup>
+		<col style="width: 1%;">
+		<col style="width: 99%;">
+	</colgroup>
+	<thead>
+		<tr>
+			<th scope="col">
+				{icon name="money"}
+			</th>
+			<th scope="col" class="nobr">
+				<strong>{trans("Invoices")}</strong>
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td class="container" colspan="2">
+				<table style="width: 100%;">
+					<colgroup>
+						<col style="width: 1%;">
+						<col style="width: 99%;">
+					</colgroup>
+					<tr>
+						<td>
+							<table style="width: 100%;">
+								<colgroup>
+									<col style="width: 1%;">
+									<col style="width: 1%;">
+									<col style="width: 98%;">
+								</colgroup>
+								<tr>
+									<td>
+										{icon name="division"}
+									</td>
+									<td class="nobr">
+										<strong>{trans("Division")}</strong>
+									</td>
+									<td>
+										<select size="1" name="division" form="printinvoices"
+											{tip text="Select division"}>
+											<option value="0">{trans("— all —")}</option>
+											{foreach $divisions as $division}
+												<option value="{$division.id}">{$division.label|escape}</option>
+											{/foreach}
+										</select>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										{icon name="customer"}
+									</td>
+									<td class="nobr">
+										<strong>{trans("Customer")}</strong>
+									</td>
+									<td class="nobr">
+										{customerlist form="printinvoices" customers=$customers version=2
+											selectname="cust" inputname="customer" firstoption="— all customers —"
+											selecttip="You can select customer to limit results" inputtip="Enter customer ID or leave empty for all customers"}
+									</td>
+								</tr>
+								<tr>
+									<td>
+										{icon name="customer"}
+									</td>
+									<td>
+										<strong>{trans("Customers")}</strong>
+									</td>
+									<td>
+										<select name="customer_type" form="printinvoices">
+											<option value="-1">{trans("— all customers —")}</option>
+											{foreach $_CTYPES as $key => $item}
+												<option value="{$key}">{$item}</option>
+											{/foreach}
+										</select>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										{icon name="customergroup"}
+									</td>
+									<td class="nobr">
+										<strong>{trans("Group")}</strong>
+									</td>
+									<td class="nobr">
+										<input type="hidden" name="group" value="all" form="printinvoices">
+										<select size="1" name="group[]" class="lms-ui-multiselect" form="printinvoices"
+											data-default-value="{trans("— all groups —")}" multiple>
+											{foreach $customergroups as $customergroup}
+												<option value="{$customergroup.id}">{$customergroup.name|trunescape:30}</option>
+											{/foreach}
+										</select>
+										<label>
+											<input type="checkbox" name="groupexclude" form="printinvoices"
+												{if $listdata.groupexclude} checked{/if}>
+											{trans("exclude group")}
+										</label>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										{icon name="queue"}
+									</td>
+									<td class="nobr">
+										<strong>{trans("Plan")}</strong>
+									</td>
+									<td>
+										<input type="hidden" name="numberplan" value="all" form="printinvoices">
+										<select name="numberplan[]" {tip class="lms-ui-multiselect" text="Select numbering plan"}
+											form="printinvoices" data-default-value="{trans("— all —")}" multiple>
+											{foreach $numberplans as $plan}
+												{assign var=period value=$plan.period}
+												<option value="{$plan.id}"
+													>{number number=$plan.next template=$plan.template time=$invoice.cdate} ({$_NUM_PERIODS.$period})</option>
+											{/foreach}
+										</select>
+									</td>
+								</tr>
+							</table>
+						</td>
+						<td>
+							<table style="width: 100%;">
+								<colgroup>
+									<col style="width: 1%;">
+									<col style="width: 1%;">
+									<col style="width: 1%;">
+									<col style="width: 97%;">
+								</colgroup>
+								<tr>
+									<td>
+										{icon name="calendar"}
+									</td>
+									<td>
+										<span class="lms-ui-date-period-container">
+											<strong>{trans("Period:")}</strong>
+											{date_period_preset from="[form=\"printinvoices\"][name=\"invoicefrom\"]" to="[form=\"printinvoices\"][name=\"invoiceto\"]"}
+											<span>{trans("From")}</span>
+											<input type="text" name="invoicefrom" size="10" maxlength="10" form="printinvoices"
+												placeholder="{trans("yyyy/mm/dd")}"
+												{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+											<span>{trans("To")}</span>
+											<input type="text" name="invoiceto" size="10" maxlength="10" form="printinvoices"
+												placeholder="{trans("yyyy/mm/dd")}"
+												{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+										</span>
+									</td>
+									<td>
+										{icon name="info"}
+									</td>
+									<td class="nobr">
+										<label>
+											<input type="checkbox" name="invoiceorg" form="printinvoices"
+												{if preg_match('/original/i', $default_printpage)} checked{/if}>
+											{trans("original")}
+										</label>
+										<label>
+											<input type="checkbox" name="invoicecopy" form="printinvoices"
+												{if preg_match('/copy/i', $default_printpage)}  checked{/if}>
+											{trans("copy")}
+										</label>
+										<label>
+											<input type="checkbox" name="invoicedup" form="printinvoices"
+												{if preg_match('/duplicate/i', $default_printpage)} checked{/if}>
+											{trans("duplicate")}
+										</label>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										{icon name="options"}
+									</td>
+									<td colspan="2" class="nobr">
 										<strong>
-											{trans("attach documents")}
+											{trans("Agreement for an electronic invoice")}
 										</strong>
-									</label>
-								</td>
-							</tr>
-						</TABLE>
-					</TD>
-				</TR>
-			</TABLE>
-		</TD>
-	</TR>
-	<TR>
-		<TD style="width: 100%;" colspan="2" align="right">
-			<label style="display: none;">
-				{trans("JPK format:")}
-				<SELECT name="format">
-					<OPTION value="xml">{trans("XML")}</OPTION>
-					<OPTION value="csv">{trans("CSV")}</OPTION>
-				</SELECT>
-			</label>
-			<input type="hidden" name="format" value="xml">
-			<a class="export_to_jpk" href="javascript:export_to_jpk('fa');">{trans("Export to JPK-FA format")} <img src="img/docum.gif" alt=""></a>
-			<a class="export_to_jpk" href="javascript:export_to_jpk('vat');">{trans("Export to JPK-VAT format")} <img src="img/docum.gif" alt=""></a>
-			<a href="javascript:print_forms();">{trans("Print form of cash transfer")} <img src="img/print.gif" alt=""></a>
-			<A href="javascript:print();">{trans("Print")} <IMG src="img/print.gif" alt="" hspace="2"></A>
-		</TD>
-	</TR>
-    </TBODY>
-</TABLE>
-</form>
+										<select name="einvoice" form="printinvoices">
+											<option value="0">{trans("— all —")}</option>
+											<option value="1">{trans("yes")}</option>
+											<option value="2">{trans("no")}</option>
+										</select>
+									</td>
+									<td>
+										<label>
+											<input type="checkbox" name="autoissued" form="printinvoices">
+											{trans("only automatically issued")}
+										</label>
+										<br>
+										<label>
+											<input type="checkbox" name="manualissued" form="printinvoices">
+											{trans("only manually issued")}
+										</label>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										{icon name="document"}
+									</td>
+									<td collspan="3">
+										<label>
+											<input type="checkbox" name="attach-documents" form="printinvoices">
+											<strong>
+												{trans("attach documents")}
+											</strong>
+										</label>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2" class="lms-ui-box-buttons">
+				<label style="display: none;">
+					{trans("JPK format")}
+					<select name="format" form="printinvoices">
+						<option value="xml">{trans("XML")}</option>
+						<option value="csv">{trans("CSV")}</option>
+					</select>
+				</label>
+				<input type="hidden" name="format" value="xml" form="printinvoices">
+				{button class="export_to_jpk" icon="document" onclick="javascript:export_to_jpk('fa');" label="Export to JPK-FA format"}
+				{button class="export_to_jpk" icon="document" onclick="javascript:export_to_jpk('vat');" label="Export to JPK-VAT format"}
+				{button icon="print" label="Print form of cash transfer" onclick="print()_forms;"}
+				{button icon="print" label="Print" onclick="print();"}
+			</td>
+		</tr>
+	</tbody>
+</table>
 {/if}
 {if $printmenu=="finances"}
 <form method="post" name="printforms" id="printforms" action="?m=print&type=transferforms&kind=2">
