bugfix: lots of grammar/spelling corrections for locales

--- a/templates/default/choose/choosegpscoords.html
+++ b/templates/default/choose/choosegpscoords.html
@@ -73,7 +73,7 @@
 <table cellpadding="5" width="100%">
 	<tr>
 		<td class="fall dark" align="center">
-			<B>{trans("Select gps coordinates:")}</B>
+			<B>{trans("Select GPS coordinates:")}</B>
 		</td>
 	</tr>
 </table>
