--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -392,7 +392,7 @@
 											<input type="text" id="longitude" name="nodedata[longitude]"
 												value="{if $nodedata.longitude}{$nodedata.longitude}{else}{/if}"
 												{tip trigger="longitude"}>
-											{button type="link" icon="map" tip="Click to select gps coordinates from map"
+											{button type="link" icon="map" tip="Click to select GPS coordinates from map"
 												onClick="return gpscoordschoosewin(document.nodeadd.elements['nodedata[longitude]'], document.nodeadd.elements['nodedata[latitude]']);"}
 										</td>
 									</tr>
@@ -408,7 +408,7 @@
 											<input type="text" id="latitude" name="nodedata[latitude]"
 												value="{if $nodedata.latitude}{$nodedata.latitude}{else}{/if}"
 												{tip trigger="latitude"}>
-											{button type="link" icon="map" tip="Click to select gps coordinates from map"
+											{button type="link" icon="map" tip="Click to select GPS coordinates from map"
 												onClick="return gpscoordschoosewin(document.nodeadd.elements['nodedata[longitude]'], document.nodeadd.elements['nodedata[latitude]']);"}
 										</td>
 									</tr>
