--- a/templates/default/node/nodeeditbox.html
+++ b/templates/default/node/nodeeditbox.html
@@ -439,7 +439,7 @@
 											<input type="text" id="longitude" name="nodeedit[longitude]"
 												value="{if $nodeinfo.longitude}{$nodeinfo.longitude}{else}{/if}"
 												{tip trigger="longitude"}>
-											{button type="link" icon="map" tip="Click to select gps coordinates from map"
+											{button type="link" icon="map" tip="Click to select GPS coordinates from map"
 												onClick="return gpscoordschoosewin(document.editnode.elements['nodeedit[longitude]'], document.editnode.elements['nodeedit[latitude]']);"}
 										</td>
 									</tr>
@@ -455,7 +455,7 @@
 											<input type="text" id="latitude" name="nodeedit[latitude]"
 												value="{if $nodeinfo.latitude}{$nodeinfo.latitude}{else}{/if}"
 												{tip trigger="latitude"}>
-											{button type="link" icon="map" tip="Click to select gps coordinates from map"
+											{button type="link" icon="map" tip="Click to select GPS coordinates from map"
 												onClick="return gpscoordschoosewin(document.editnode.elements['nodeedit[longitude]'], document.editnode.elements['nodeedit[latitude]']);"}
 										</td>
 									</tr>
