--- a/templates/default/node/nodesearch.html
+++ b/templates/default/node/nodesearch.html
@@ -96,7 +96,7 @@
 				<option value="9"{if $nodesearch.status == 9} selected{/if}>{trans("without radio sector")}</option>
 				<option value="7"{if $nodesearch.status == 7} selected{/if}>{trans("with warning")}</option>
 				<option value="10"{if $nodesearch.status == 10} selected{/if}>{trans("with locks")}</option>
-				<option value="8"{if $nodesearch.status == 8} selected{/if}>{trans("without gps coords")}</option>
+				<option value="8"{if $nodesearch.status == 8} selected{/if}>{trans("without GPS coords")}</option>
 			</select>
 		</td>
 	</tr>
