--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -756,7 +756,7 @@
 									<td colspan="2"></td>
 									<td colspan="2" class="nobr">
 										{trans("Sorting")}
-										<select name="sorttype" form="invoicereport" {tip text="Select sort cryterion"}>
+										<select name="sorttype" form="invoicereport" {tip text="Select sorting criterion"}>
 											<option value="cdate">{trans("Draw-up date")}</option>
 											<option value="sdate">{trans("Sale date")}</option>
 											<option value="pdate">{trans("Deadline")}</option>
