--- a/templates/default/print/printukeincome.html
+++ b/templates/default/print/printukeincome.html
@@ -27,11 +27,11 @@
 			{/if}
 		</TD>
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
-			{trans("<!uke-income>Bussiness services")}
+			{trans("<!uke-income>Business services")}
 		</TD>
 		{if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
-			{trans("<!uke-income>Bussiness income")}
+			{trans("<!uke-income>Business income")}
 		</TD>
 		{/if}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
