--- a/templates/default/tariff/tarifftaglist.html
+++ b/templates/default/tariff/tarifftaglist.html
@@ -70,7 +70,7 @@
             return false;
         });
         $('.delete-tarifftag-alert').click(function() {
-            alertDialog($t("Tag with assigned tariffs cannont be deleted!"), this);
+            alertDialog($t("Tag with assigned tariffs cannot be deleted!"), this);
             return;
         });
     </script>
